--- a/ProfiCreditCars/ProfiCreditCars.Data/ProfiCreditCars.Data.csproj
+++ b/ProfiCreditCars/ProfiCreditCars.Data/ProfiCreditCars.Data.csproj
@@ -51,8 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IProfiCreditCarsData.cs" />
     <Compile Include="ProfiCreditCarsContext.cs" />
+    <Compile Include="ProfiCreditCarsData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
