--- a/ProfiCreditCars/ProfiCreditCars.Test/packages.config
+++ b/ProfiCreditCars/ProfiCreditCars.Test/packages.config
@@ -14,4 +14,5 @@
   <package id="Moq" version="4.5.22" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.24.0.0" targetFramework="net452" />
 </packages>
